# eShop-Avocado-Backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
avocado/: config.py
avocado/app/backend/: config.py  main.py
avocado/app/backend/api/: __init__.py  errors.py
avocado/app/backend/api/dependencies/: common.py
avocado/app/backend/api/endpoints/: cart.py  product.py
avocado/app/backend/schemas/: cart.py  product.py
avocado/app/backend/services/: __init__.py  cart.py  product.py
avocado/lib/: profiling.py
avocado/models/: __init__.py  main.py  meta.py
avocado/scripts/: initializedb.py  uvicorn_app.py
