[tool.poetry]
name = "avocado"
version = "0.0.1"
description = "The Shop"
authors = ["dz <danazaretska@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<4.0.0"
sqlalchemy = { extras=["asyncio"], version = "^2.0.4" }
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.95.1"
greenlet = "^2.0.2"
psycopg = { extras = ["binary"], version = "^3.1.6" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
ruff = "^0.0.253"
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.2.1"

[tool.isort]
line_length = 79
profile = "black"
force_single_line = true

[tool.ruff]
line-length = 79
extend-select = [
    "Q", # flake8-quotes
    "RUF100", # unused-noqa
    "C90", # mccabe
    "UP" # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008"  # do not perform function calls in argument defaults
]
flake8-quotes = { inline-quotes = "double", multiline-quotes = "double" }
mccabe = { max-complexity = 10 }
target-version = "py311"

[tool.black]
line-length = 79
target-version = ["py311"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
initializedb = "avocado.scripts.initializedb:main"
uvicorn_app = "avocado.scripts.uvicorn_app:main"
